Fixed Mobile Submit Receipts Issue

--- a/templates/grant_status.html
+++ b/templates/grant_status.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col margin15">
+        <div class="col-md-4 col margin15 mobile-margin">
             <div class="center padding-bottom-20">
                 <b>Actions</b>
             </div>
@@ -80,7 +80,8 @@
         </div>
     </div>
     
-    <div class="navbar navbar-fixed-bottom center" style="color:#b1b1b1;"><i>Brought to you by Nicholas Boucher '19</i></div>
+    <div class="navbar navbar-fixed-bottom center hidden-xs hidden-sm" style="color:#b1b1b1;"><i>Brought to you by Nicholas Boucher '19</i></div>
+    <div class="center hidden-md hidden-lg" style="color:#b1b1b1;"><i>Brought to you by Nicholas Boucher '19</i></div>
     
 {% endblock %}
 
