Fix typos and update to accord with policy

--- a/templates/email/interview_scheduled.html
+++ b/templates/email/interview_scheduled.html
@@ -7,18 +7,19 @@
     <p>Dear {{ grant.contact_first_name }} {{ grant.contact_last_name }},</p>
     <p>An interview has been scheduled for your grant application <i>{{ grant.project }}</i>. The interview is scheduled for:</p>
     <div style="text-align:center;margin:15px;font-size:1.5em;"><b>{{ grant.interview_schedule_date | datetime }}</b></div>
-    <p>The interview will occur in the basement of Memerial Hall in the classrooms just beyond "FlyBy." Please send a representative
-        from your organization to attend the interview (it does not have to be you).
+    <p>The interview will occur in the basement of Memorial Hall in the classrooms just beyond "FlyBy." Please send a representative
+        from your organization to attend the interview (it does not have to be you.)
         In order for your grant application to receive any funding, someone from {{ grant.organization }} must attend the interview.
         {%- if grant.is_collaboration %}
             Since you indicated that your project is a collaboration between multiple student organizations on your application, 
             you are eligible for certain benefits which could result in additional funding for your grant. However, to secure these
-            benefits you must have one representative from each of <i>{{ grant.collaborators }}</i> attend the interview in addition
+            benefits you must have one representative from a majority of the organizations you are collaborating with
+            (<i>{{ grant.collaborators }}</i>) attend the interview in addition
             to the representative from {{ grant.organization }}.
         {% endif -%}
         If you are more than 10 minutes late to your assigned interview, you may not be seen until the next interview week.
     </p>
-    <p>As always, you can track the status of your grant <a href="{{ url_for('grant', grant_id=grant.grant_id, _external=True)}}">here</a>.</p>
+    <p>As always, you can <a href="{{ url_for('grant', grant_id=grant.grant_id, _external=True)}}">track the status of your grant on our portal</a>.</p>
     <p>Best,
     <br>Nicholas Boucher
     <br><i>Treasurer, Undergraduate Council</i></p>
