Added Bank Name to Retroactive

--- a/templates/review_grant_receipts.html
+++ b/templates/review_grant_receipts.html
@@ -233,6 +233,7 @@
                                 <label for="treasurer_notes">Treasurer Notes<br><span class="regular"><i>will be sent to grant applicant</i></span></label>
                                 <textarea class="form-control resize-vertical" rows="1" name="treasurer_notes"></textarea>
                             </div>
+                            <p style="font-size:1.5em;">Bank Name: <b>{{ organization.bank_name }}</b></p>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
