--- a/templates/review_grant_receipts.html
+++ b/templates/review_grant_receipts.html
@@ -233,7 +233,9 @@
                                 <label for="treasurer_notes">Treasurer Notes<br><span class="regular"><i>will be sent to grant applicant</i></span></label>
                                 <textarea class="form-control resize-vertical" rows="1" name="treasurer_notes"></textarea>
                             </div>
-                            <p style="font-size:1.5em;">Bank Name: <b>{{ organization.bank_name }}</b></p>
+                            {% if organization.bank_name %}
+                                <p style="font-size:1.5em;">Bank Name: <b>{{ organization.bank_name }}</b></p>
+                            {% endif %}
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
