--- a/templates/email/receipts_reviewed.html
+++ b/templates/email/receipts_reviewed.html
@@ -14,6 +14,11 @@
         <p>If you choose not reimburse the UC this amount, then you will go into bad standing with the UC which will make you
             ineligible for future grants. If you feel that our evalutaion of your spending is not right, you are welcome to
             appear before the UC Financial Hearing Committee.</p>
+            
+        {% if grant.treasurer_notes %}
+            <p>The following note was attached to your grant by the final reviewer of your application: <i>{{ grant.treasurer_notes }}</i></p>
+        {% endif %}
+            
         <p>Please repspond to this email to coordinate your reimbursement with the UC Treasurer or to setup a time for a hearing.
             In order to avoid going into bad standing with the UC, your reimbursement will be due two weeks from today.</p>
     
@@ -21,6 +26,11 @@
     
         <p>Congratulations! Your receipts have been approved by the undergraduate council, which means that you have completed the full grant process
             for <i>{{ grant.project }}</i>.</p>
+            
+        {% if grant.treasurer_notes %}
+            <p>The following note was attached to your grant by the final reviewer of your application: <i>{{ grant.treasurer_notes }}</i></p>
+        {% endif %}
+            
         <p>Thank you for applying for a UC Grant, and we hope to see you again soon!</p>
             
     {% endif %}
