Added Receipt Image Rotation Support

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -136,6 +136,9 @@
 
         </div>
         
+        <!-- Image rotation script -->
+        <script src="{{ url_for('static', filename='jQueryRotate.min.js') }}"></script>
+        
         <!-- Content Block for scripts needed for individual pages, loaded at bottom of DOM -->
         {% block scripts %}{% endblock %}
         
