--- a/templates/upfront_receipts.html
+++ b/templates/upfront_receipts.html
@@ -22,11 +22,11 @@
                     <h3>Receipt Images</h3>
                     <hr />
                 </div>
-                
+
                 {% for receipt in receipts %}
-                    <img src="{{ receipt }}" class="fullwidth rotatable">
+                    <img src="{{ receipt }}" class="fullwidth rotatable" alt="Couldn't display image: {{ receipt }}">
                 {% endfor %}
-            
+
             </div>
             <div class="right">
                 <div class="center" style="margin-top: -20px;">
@@ -34,7 +34,7 @@
                     <h3>Completed Project</h3>
                     <hr />
                 </div>
-                
+
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                         <tr>
@@ -117,18 +117,18 @@
                         {% endif %}
                     </tbody>
                 </table>
-                
+
                 <div class="center">
                     <p>{{ grant.completed_proj_comments }}</p>
                 </div>
-                
-                
+
+
                 <div class="center">
                     <hr />
                     <h3>Review Funds</h3>
                     <hr />
                 </div>
-                
+
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                         <tr>
@@ -217,11 +217,11 @@
                         {% endif %}
                     </tbody>
                 </table>
-                
+
                 <div class="center">
                     <p>{{ grant.interviewer_notes | suppress_none }}</p>
                 </div>
-                
+
                 <div class="float-right">
                     Total Owed:<p id="total" class="bold" style="font-size:1.5em;">0</p>
                 </div>
@@ -249,30 +249,30 @@
 {% block scripts %}
 
     <script type="text/javascript">
-    
+
         var paid = {{ grant.amount_allocated | two_decimals }};
-        
+
         /* Updates the total value textbox */
         function UpdateTotal() {
-            
+
             // Sums the total value
             var total = 0.0;
             $(".funding").each(function() {
                 total += parseFloat($(this).val());
             });
-            
+
             owed = paid - total;
-            
+
             // Set the value
             $("#total").text("$" + owed.toFixed(2));
-            
+
             // Update hidden form value
             $('input[name="amount_owed"]').val(owed.toFixed(2));
         }
-        
+
         // Update total on change
         $(".funding").change(UpdateTotal);
-        
+
         // Allow rotation of images on click
         $(".rotatable").rotate({bind:{
           click: function(){
@@ -282,7 +282,7 @@
             }
           }
         });
-        
+
     </script>
 
 {% endblock %}
