Changed alt link styles

--- a/templates/upfront_receipts.html
+++ b/templates/upfront_receipts.html
@@ -24,7 +24,7 @@
                 </div>
 
                 {% for receipt in receipts %}
-                    <img src="{{ receipt }}" class="fullwidth rotatable" alt="Couldn't display image: {{ receipt }}" data-url="{{ receipt }}">
+                    <img src="{{ receipt }}" class="fullwidth rotatable" alt="Couldn't display image" data-url="{{ receipt }}">
                 {% endfor %}
 
             </div>
