--- a/static/styles.css
+++ b/static/styles.css
@@ -133,14 +133,14 @@
         padding-right:20px;
         border-right: 1px solid #ccc;
     }
-    
+
     .flexbox {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
       overflow: hidden;
     }
-    
+
     .flexbox .col {
       flex: 1;
     }
@@ -164,3 +164,9 @@ nav.navbar-findcond ul.dropdown-menu > li > a { color: #444; }
 nav.navbar-findcond ul.dropdown-menu > li > a:hover { background: #f14444; color: #fff; }
 nav.navbar-findcond span.badge { background: #f14444; font-weight: normal; font-size: 11px; margin: 0 4px; }
 nav.navbar-findcond span.badge.new { background: rgba(255, 0, 0, 0.8); color: #fff; }
+
+img.rotatable {
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+}
