Moved to in-page style blocks

--- a/templates/review_grant_receipts.html
+++ b/templates/review_grant_receipts.html
@@ -4,6 +4,16 @@
     Treasurer - Grant {{ grant.grant_id }}
 {% endblock %}
 
+{% block head %}
+    <style>
+        img.rotatable {
+            text-decoration: underline;
+            color: blue;
+            cursor: pointer;
+        }
+    </style>
+{% enblock %}
+
 {% block main %}
 
  <div class="wrapper">
