--- a/templates/upfront_receipts.html
+++ b/templates/upfront_receipts.html
@@ -6,6 +6,16 @@
 
 {% block main %}
 
+{% block head %}
+    <style>
+        img.rotatable {
+            text-decoration: underline;
+            color: blue;
+            cursor: pointer;
+        }
+    </style>
+{% enblock %}
+
  <div class="wrapper">
         <div class="row">
             <div class="top">
