--- a/templates/upfront_receipts.html
+++ b/templates/upfront_receipts.html
@@ -14,7 +14,7 @@
             cursor: pointer;
         }
     </style>
-{% enblock %}
+{% endblock %}
 
  <div class="wrapper">
         <div class="row">
