--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
 
     <body>
         {% if current_user.is_authenticated %}
-        
+
             <!-- Navbar -->
             <style>body { padding-top: 70px; }</style>
             <nav class="navbar navbar-findcond navbar-fixed-top">
@@ -65,6 +65,7 @@
                 					<ul class="dropdown-menu" role="menu">
                 					    <li><a href="{{ url_for('grants_packs') }}">Grants Packs</a></li>
                 						<li><a href="{{ url_for('review_receipts') }}">Treasurer</a></li>
+                                        <li><a href="{{ url_for('owed_money') }}">Owed Money</a></li>
                         				<li><a href="{{ url_for('schedule_interviews') }}">Schedule</a></li>
                         				<li><a href="{{ url_for('settings') }}">Settings</a></li>
                 					</ul>
@@ -81,7 +82,7 @@
             		</div>
             	</div>
             </nav>
-            
+
         {% endif %}
 
         <div class="container{{ '-fluid' if fullwidth }}">
@@ -135,23 +136,23 @@
             </main>
 
         </div>
-        
+
         <!-- Image rotation script -->
         <script src="{{ url_for('static', filename='jQueryRotate.min.js') }}"></script>
-        
+
         <!-- Content Block for scripts needed for individual pages, loaded at bottom of DOM -->
         {% block scripts %}{% endblock %}
-        
+
         <!-- Google Analytics Tracking Script -->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
+
           ga('create', 'UA-92409309-1', 'auto');
           ga('send', 'pageview');
-        
+
         </script>
 
     </body>
