Add raw grant edit, database upgrades, and disabled cronjobs

--- a/templates/owed_money.html
+++ b/templates/owed_money.html
@@ -36,7 +36,7 @@
                             <td><b>{{ grant.project }}</b></td>
                             <td>{{ grant.amount_dispensed | usd }}</td>
                             <td>No Receipts</td>
-                            <td><a href="#" class="btn btn-default">Process</a></td>
+                            <td><a href="{{ url_for('process_owed_money', grant_id=grant.grant_id) }}" class="btn btn-default">Process</a></td>
                             <td><a href="{{ url_for('grant', grant_id=grant.grant_id) }}" class="btn btn-default">Status</a></td>
                             <td><a href="#" class="btn btn-default">Raw</a></td>
                         </tr>
@@ -48,13 +48,18 @@
                             <td><b>{{ grant.project }}</b></td>
                             <td>{{ grant.reimburse_uc_amount | usd }}</td>
                             <td>Unspent Money</td>
-                            <td><a href="#" class="btn btn-default">Process</a></td>
+                            <td><a href="{{ url_for('process_owed_money', grant_id=grant.grant_id) }}" class="btn btn-default">Process</a></td>
                             <td><a href="{{ url_for('grant', grant_id=grant.grant_id) }}" class="btn btn-default">Status</a></td>
                             <td><a href="#" class="btn btn-default">Raw</a></td>
                         </tr>
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-right">
+            <b>Total: {{ total | usd }}</b><br /><br />
         </div>
     </div>
 
